<resources>
    <string name="app_name">Bored</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">所有看板</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_play">休閒娛樂</string>
    <string name="menu_sports">運動</string>
    <string name="menu_traffic">車聚</string>
    <string name="menu_travel">旅遊</string>
    <string name="menu_food">美食</string>
    <string name="menu_pet">寵物</string>
    <string name="menu_study">學習</string>
    <string name="menu_love">關注中</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>