<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_love">

    <fragment
        android:id="@+id/nav_love"
        android:name="com.example.bored.ui.love.LoveFragment"
        android:label="@string/menu_love"
        tools:layout="@layout/fragment_love" />

    <fragment
        android:id="@+id/nav_play"
        android:name="com.example.bored.ui.play.PlayFragment"
        android:label="@string/menu_play"
        tools:layout="@layout/fragment_play" />

    <fragment
        android:id="@+id/nav_sports"
        android:name="com.example.bored.ui.sports.SportsFragment"
        android:label="@string/menu_sports"
        tools:layout="@layout/fragment_sports" />

    <fragment
        android:id="@+id/nav_traffic"
        android:name="com.example.bored.ui.traffic.TrafficFragment"
        android:label="@string/menu_traffic"
        tools:layout="@layout/fragment_traffic" />
    <fragment
        android:id="@+id/nav_travel"
        android:name="com.example.bored.ui.travel.TravelFragment"
        android:label="@string/menu_travel"
        tools:layout="@layout/fragment_travel" />
    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.bored.ui.food.FoodFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_food" />
    <fragment
        android:id="@+id/nav_pet"
        android:name="com.example.bored.ui.pet.PetFragment"
        android:label="@string/menu_pet"
        tools:layout="@layout/fragment_pet" />
    <fragment
        android:id="@+id/nav_study"
        android:name="com.example.bored.ui.study.StudyFragment"
        android:label="@string/menu_study"
        tools:layout="@layout/fragment_study" />
</navigation>